Added register-user API
