# services/accounts-svc/src/controllers/user-controllers/index.js
@@ -1,0 +1,10 @@
+'use strict';
+
+import { verifyUsernameEmailAlreadyTaken, registerNewUser } from './registerUser.controller.js';
+import { getUserInfoById } from './getUserInfo.controller.js';
+
+export default {
+  verifyUsernameEmailAlreadyTaken,
+  registerNewUser,
+  getUserInfoById,
+};
